--- a/frontend/src/blocks/auth/__login-link/auth__login-link.css
+++ b/frontend/src/blocks/auth/__login-link/auth__login-link.css
@@ -1,5 +1,6 @@
 .auth__login-link {
-    padding-left: 3px;
-    color: #fff;
+    padding-left: 20px;
+    color: #000;
     text-decoration: none;
+    font-weight: 700;
 }
