--- a/frontend/src/blocks/btn/btn.css
+++ b/frontend/src/blocks/btn/btn.css
@@ -6,7 +6,7 @@
   padding: 0;
 
   background-color: transparent;
-  border: 1px solid #FFF;
+  border: 1px solid #000;
   box-sizing: border-box;
 
   transition: 0.8s ease-out 0.2s;
