--- a/frontend/src/blocks/logo/logo.css
+++ b/frontend/src/blocks/logo/logo.css
@@ -4,11 +4,11 @@
   width: 103.7px;
   height: 24.4px;
 
-  padding-top: 28px;
   padding-bottom: 32px;
   padding-left: 27px;
 
-  color: #fff;
+  color: #000;
+  text-decoration: none;
 }
 
 @media screen and (min-width: 918px) {
@@ -16,7 +16,6 @@
     width: 142px;
     height: 33px;
 
-    padding-top: 45px;
     padding-bottom: 41px;
     padding-left: 0;
   }
