--- a/frontend/src/blocks/popup/popup.css
+++ b/frontend/src/blocks/popup/popup.css
@@ -12,8 +12,7 @@
     height: 100vh;
 
     margin: 0 auto;
-    padding-left: 19px;
-    padding-right: 19px;
+    padding: 19px;
     box-sizing: border-box;
 
     color: #000;
