--- a/frontend/src/blocks/btn/_type/btn_type_done.css
+++ b/frontend/src/blocks/btn/_type/btn_type_done.css
@@ -1,11 +1,11 @@
-.btn_type_add {
+.btn_type_done {
   width: 50px;
   height: 50px;
 
   margin: 33px auto 0;
   border: none;
 
-  background-image: url(../../../images/plus.svg);
+  background-image: url(../../../images/done.svg);
   background-size: 50px 50px;
   background-repeat: no-repeat;
   background-position: center center;
