--- a/frontend/src/blocks/btn/_type/btn_type_user.css
+++ b/frontend/src/blocks/btn/_type/btn_type_user.css
@@ -1,12 +1,16 @@
-.btn_type_add {
+.btn_type_user {
   width: 50px;
   height: 50px;
 
   margin: 33px auto 0;
-  border: none;
 
-  background-image: url(../../../images/plus.svg);
+  background-image: url(../../../images/user.svg);
   background-size: 50px 50px;
   background-repeat: no-repeat;
   background-position: center center;
+  border: none;
+}
+
+.btn_type_user:hover + .dropdown {
+  display: flex;
 }
