--- a/frontend/src/blocks/page/page.css
+++ b/frontend/src/blocks/page/page.css
@@ -4,8 +4,8 @@
 
   min-height: 100vh;
 
-  background-color: #000;
-  color: #fff;
+  background-color: #fff;
+  color: #000;
   font-family: 'Inter', sans-serif;
   font-size: 14px;
   line-height: calc(16.94 / 14);
