--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,5 @@
 @import url("./vendor/normalize.css");
+@import url("./themes/prism.css");
 @import url("./vendor/fonts/fonts.css");
 @import url("./blocks/page/page.css");
 @import url("./blocks/logo/logo.css");
@@ -14,7 +15,9 @@
 @import url("./blocks/profile/__activity/profile__activity.css");
 @import url("./blocks/profile/__text/profile__text.css");
 @import url("./blocks/btn/btn.css");
+@import url("./blocks/btn/_type/btn_type_repeat.css");
 @import url("./blocks/btn/_type/btn_type_add.css");
+@import url("./blocks/btn/_type/btn_type_user.css");
 @import url("./blocks/btn/_type/btn_type_edit.css");
 @import url("./blocks/btn/_type/btn_type_avatar-edit.css");
 @import url("./blocks/btn/_type/btn_type_save.css");
@@ -24,6 +27,9 @@
 @import url("./blocks/btn/_type/btn_type_delete.css");
 @import url("./blocks/btn/_type/btn_type_disable.css");
 @import url("./blocks/btn/_inactive/btn_inactive.css");
+@import url("./blocks/btn/_type/btn_type_back.css");
+@import url("./blocks/btn/_type/btn_type_done.css");
+@import url("./blocks/btn/_type/btn_type_next.css");
 @import url("./blocks/gallery/gallery.css");
 @import url("./blocks/cards/cards.css");
 @import url("./blocks/card/card.css");
@@ -56,3 +62,9 @@
 @import url("./blocks/auth/__link/auth__link.css");
 @import url("./blocks/auth/__signin/auth__signin.css");
 @import url("./blocks/auth/__login-link/auth__login-link.css");
+@import url("./blocks/repeat/repeat.css");
+@import url("./blocks/repeat/__answer-hidden/repeat__answer-hidden.css");
+@import url("./blocks/repeat/__answer/repeat__answer.css");
+@import url("./blocks/repeat/__btns/repeat__btns.css");
+@import url("./blocks/dropdown/dropdown.css");
+@import url("./blocks/questions/questions.css");
