--- a/frontend/src/blocks/popup/__container/popup__container.css
+++ b/frontend/src/blocks/popup/__container/popup__container.css
@@ -15,6 +15,7 @@
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
   opacity: 1;
+  overflow: auto;
 }
 
 @media screen and (min-width: 515px) {
