--- a/frontend/src/blocks/auth/__input/auth__input.css
+++ b/frontend/src/blocks/auth/__input/auth__input.css
@@ -4,7 +4,7 @@
     margin: 0 0 30px;
     padding: 0 0 13px;
   
-    color: #fff;
+    color: #000;
     font-size: 14px;
     line-height: calc(16.94 / 14);
     text-align: left;
